input color: onchange event is not fired when changing color from color chooser https://bugs.webkit.org/show_bug.cgi?id=66848

Reviewed by Kent Tamura.

Source/WebCore:

Test: fast/forms/color/input-color-onchange-event.html

* WebCore.exp.in: Added calls used in Internals.cpp.
* html/ColorInputType.cpp:
(WebCore::ColorInputType::colorSelected): Dispatch change event.
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::connectToColorChooser): Added. Called from Internals::connectColorChooserClient.
* html/HTMLInputElement.h:
* testing/Internals.cpp:
(WebCore::Internals::connectColorChooserClient): Added. Connects element as client to color chooser.
(WebCore::Internals::selectColorInColorChooser): Added. Simulate color selection in color chooser.
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/forms/color/input-color-onchange-event-expected.txt: Added.
* fast/forms/color/input-color-onchange-event.html: Added. Tests if change event is fired when user selects color from color chooser.


Canonical link: https://commits.webkit.org/83079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94158 268f45cc-cd09-0410-ab3c-d52691b4dbfc